Usecase-9-ServiceMesh-ISTIO/peer-authentication.yaml
apiVersion: security.istio.io/v1

kind: PeerAuthentication

metadata:
  name: default
  namespace: production

spec:

  mtls:

    mode: STRICT
