Usecase-9-ServiceMesh-ISTIO/backend_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: production
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend
      version: v1

  template:

    metadata:
      labels:
        app: backend
        version: v1

    spec:
      containers:

      - name: backend

        image: hashicorp/http-echo

        args:
        - "-text=v1"

        ports:
        - containerPort: 5678
