Usecase-9-ServiceMesh-ISTIO/backend_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: production
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend
      version: v2

  template:

    metadata:
      labels:
        app: backend
        version: v2

    spec:
      containers:

      - name: backend

        image: hashicorp/http-echo

        args:
        - "-text=v2"

        ports:
        - containerPort: 5678
