Usecase-9-ServiceMesh-ISTIO/Service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend

spec:

  selector:
    app: backend

  ports:

  - port: 80

    targetPort: 5678
