Usecase-9-ServiceMesh-ISTIO/backend_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: production

spec:
  selector:
    app: backend

  ports:
  - name: http
    port: 80
    targetPort: 5678
