Usecase-9-ServiceMesh-ISTIO/frontend_Service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: production

spec:
  selector:
    app: frontend

  ports:
  - name: http
    port: 80
    targetPort: 80
