Usecase-9-ServiceMesh-ISTIO/destinationrule.yaml
apiVersion: networking.istio.io/v1

kind: DestinationRule

metadata:
  name: backend
  namespace: production

spec:
  host: backend

  subsets:

  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2

  trafficPolicy:

    connectionPool:

      tcp:

        maxConnections: 1

      http:

        http1MaxPendingRequests: 1

        maxRequestsPerConnection: 1

    outlierDetection:

      consecutive5xxErrors: 1

      interval: 5s

      baseEjectionTime: 30s

      maxEjectionPercent: 100
